--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
 
+    <head>
+        <meta charset="utf-8">
+        <title>Galerie Dedal</title>
+        <link rel="stylesheet" href="Fichier.css">
+        <html lang="fr">
+    </head>
+
+    <body>
+       <p>Felix Crossoneau est un artiste indépendant de 21 ans. 
+        Il est l’un de nos plus jeunes artistes du mois. Un réel artiste prometteur. 
+        Nous vous proposons une expositions dédiée à ses oeuvres tout le mois d’octobre dans notre galerie.</p>
+  
+    </body>
