--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="overlap-group">
           <a href=""><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
           <img class="loupe" src="img/loupe.png" />
-          <a href=""><img class="shop" src="img/logo-maison.png" /></a>
+          <a href="test2.html"><img class="shop" src="img/logo-maison.png" /></a>
           <img class="capture-decran" src="img/logo-dedal.png" />
         </div>
         <div id="artiste">
@@ -72,4 +72,7 @@
     </div>
   </body>
 </html>
+
+
+
 
