--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="format-ordi">
       <div class="div">
         <div class="overlap-group">
-          <a href=""><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
+          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
           <img class="loupe" src="img/loupe.png" />
           <a href="test2.html"><img class="shop" src="img/logo-maison.png" /></a>
-          <img class="capture-decran" src="img/logo-dedal.png" />
+          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" /> </a>
         </div>
         <div id="artiste">
             <img class="fefelix" src="img/photo-champ-felix.jpg" />
@@ -25,7 +25,7 @@
             </p>
             </div>
         </div>
-        <img class="img" src="img/affiche-felix.png" />
+        <img class="img" src="img/photo-affiche-jaune.png" />
         <img class="capture-decran-2" src="img/femme-jaune.png" />
         <p class="il-y-a-des-choses">
           <span class="text-wrapper">Il y a des choses qui ne se disent que dans l'intimité</span>
@@ -65,7 +65,7 @@
           <span class="span">2022<br />Huile sur toile, 18 x 12 cm</span>
         </p>
         <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
-        <a href=""><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
+        <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
         <div class="text-wrapper-3">Oeuvres uniques et certifiées</div>
         <div class="text-wrapper-4">Besoin d’aide ?</div>
       </div>
