--- a/test2.html
+++ b/test2.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Galerie Dedal</title>
-    <link rel="stylesheet" href="css/galerie.css" />
+    <link rel="stylesheet" href="css/Fichier.css" />
     <html lang="fr">
   </head>
   <body>
     <div class="format-ordi">
       <div class="div">
-        <div class="overlap">
-          <img class="enveloppe-copie" src="img/enveloppe.png" />
-          <img class="loupe" src="img/loupe.png" />
-          <img class="shop" src="img/logo-maison.png" />
-          <img class="capture-decran" src="img/logo-dedal.png" />
-        </div>
         <div class="overlap-group">
+          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
+          <a href="test3.html"><img class="loupe" src="img/loupe.png" /></a>
+          <img class="shop" src="img/logo-maison.png" />
+          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" /></a>
+        </div>
+        <div class="overlap">
           <div class="rectangle"></div>
-          <p class="dedal-des-couleurs">
+          <p class="textehistoire">
             Dedal des couleurs ouvre ses portes en 2016 en plein coeur de Paris, capitale de l’art.<br />Ici, nous
             mettons en avant des artistes indépendants du monde entier.<br />En 7 ans, nous avons invité plus d’une
             centaine d’artistes à collaborer avec nous et avons réalisé plus de 73 expositions &amp; évènements.<br />Les
@@ -27,18 +27,18 @@
           </p>
         </div>
         <div class="text-wrapper">GALERIE</div>
-        <img class="original" src="img/original.png" />
-        <img class="chat" src="img/bulle.png"/>
-        <div class="text-wrapper-2">Oeuvres uniques et certifiées</div>
-        <div class="text-wrapper-3">Besoin d’aide ?</div>
-        <img class="element" src="img/galerie-cheminée.png" />
-        <img class="img" src="img/galerie-coin.png" />
-        <img class="IMG" src="img/galerie-bleu-orange.png" />
-        <img class="photo-a" src="img/photo-felix.jpeg" />
-        <img class="capture-decran-2" src="img/galerie-mur.png" />
+        <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
+        <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
+        <div class="text-wrapper-8">Oeuvres uniques et certifiées</div>
+        <div class="text-wrapper-7">Besoin d’aide ?</div>
+        <img class="cheminé" src="img/galerie-cheminée.png" />
+        <img class="coin" src="img/galerie-coin.png" />
+        <img class="galeriebleu" src="img/galerie-bleu-orange.png" />
+        <img class="photo-cd" src="img/photo-felix.jpeg" />
+        <img class="capture-galerie" src="img/galerie-mur.png" />
         <img class="poleartsvisuels" src="img/rencontre-etudiant.jpeg" />
         <div class="overlap-2">
-          <div class="text-wrapper-4">23</div>
+          <div class="text-wrapper-6">23</div>
           <img class="affiche-perpi" src="img/Affiche-dedal.jpeg" />
         </div>
       </div>
