--- a/test3.html
+++ b/test3.html
@@ -16,7 +16,7 @@
           <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png"/> </a>
         </div>
         <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
-        <a href=""><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
+        <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
         <div class="text-wrapper-3">Oeuvres uniques et certifiées</div>
         <div class="text-wrapper-4">Besoin d’aide ?</div>
         <div class="pratiques"><div class="text-pratique">Infos pratiques</div></div>
