--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="format-ordi">
       <div class="div">
         <div class="overlap-group">
-          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
-          <img class="loupe" src="img/loupe.png" />
-          <a href="test2.html"><img class="shop" src="img/logo-maison.png" /></a>
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" /> </a>
+          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour a la page contact"/></a>
+          <img class="loupe" src="img/loupe.png" alt="recherche"/>
+          <a href="test2.html"><img class="shop" src="img/logo-maison.png" alt="informations"/></a>
+          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
         </div>
         <div id="artiste">
-            <img class="fefelix" src="img/photo-champ-felix.jpg" />
+            <img class="fefelix" src="img/photo-champ-felix.jpg" alt="photo de l'artiste Felix"/>
             <div class="overlap">
             <p class="felix-crossoneau-est">
                 Felix Crossoneau est un artiste indépendant de 21 ans. <br />Il est l'un de nos plus jeunes artistes du
@@ -25,8 +25,8 @@
             </p>
             </div>
         </div>
-        <img class="img" src="img/photo-affiche-jaune.png" />
-        <img class="capture-decran-2" src="img/femme-jaune.png" />
+        <img class="img" src="img/photo-affiche-jaune.png" alt="oeuvre de felix jaune et orange"/>
+        <img class="capture-decran-2" src="img/femme-jaune.png" alt="photo femme"/>
         <p class="il-y-a-des-choses">
           <span class="text-wrapper">Il y a des choses qui ne se disent que dans l'intimité</span>
           <span class="span">, 2023<br />Huile sur toile, 71 x 54 cm</span>
@@ -39,11 +39,11 @@
           >
         </p>
         <div class="text-wrapper-2">OEUVRES</div>
-        <img class="capture-decran-3" src="img/mini-tableau-alexis.png" />
-        <img class="capture-decran-4" src="img/femme-rouge.png" />
-        <img class="capture-decran-5" src="img/sdb.png" />
-        <img class="capture-decran-6" src="img/mini-tableau-nb.png" />
-        <img class="capture-decran-7" src="img/mini-tableau-homme-vert.png" />
+        <img class="capture-decran-3" src="img/mini-tableau-alexis.png" alt="peinture homme qui regarde son Téléphone"/>
+        <img class="capture-decran-4" src="img/femme-rouge.png" alt="peinture femme de dos qui regarde un tableau"/>
+        <img class="capture-decran-5" src="img/sdb.png" alt="peinture de salle de bain avec du sang"/>
+        <img class="capture-decran-6" src="img/mini-tableau-nb.png" alt="portrait homme cheveux long noir et blanc"/>
+        <img class="capture-decran-7" src="img/mini-tableau-homme-vert.png" alt="peinture homme avec un fond vert" />
         <p class="patrick">
           <span class="text-wrapper">Patrick 23</span>
           <span class="span">, <br />2023<br />Huile sur toile, 8 x 6 cm</span>
@@ -72,6 +72,8 @@
     </div>
   </body>
 </html>
+
+
 
 
 
