--- a/test2.html
+++ b/test2.html
@@ -10,10 +10,10 @@
     <div class="format-ordi">
       <div class="div">
         <div class="overlap-group">
-          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
-          <a href="test3.html"><img class="loupe" src="img/loupe.png" /></a>
-          <img class="shop" src="img/logo-maison.png" />
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" /></a>
+          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour a la page contact"/></a>
+          <a href="test3.html"><img class="loupe" src="img/loupe.png" alt="recherche"/></a>
+          <img class="shop" src="img/logo-maison.png" alt="informations"/>
+          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/></a>
         </div>
         <div class="overlap">
           <div class="rectangle"></div>
@@ -26,22 +26,23 @@
             ventes aux enchères font partie intégrante de notre galerie.
           </p>
         </div>
-        <div class="text-wrapper">GALERIE</div>
+        <div class="text-78">GALERIE</div>
         <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
         <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
         <div class="text-wrapper-8">Oeuvres uniques et certifiées</div>
         <div class="text-wrapper-7">Besoin d’aide ?</div>
-        <img class="cheminé" src="img/galerie-cheminée.png" />
-        <img class="coin" src="img/galerie-coin.png" />
-        <img class="galeriebleu" src="img/galerie-bleu-orange.png" />
-        <img class="photo-cd" src="img/photo-felix.jpeg" />
-        <img class="capture-galerie" src="img/galerie-mur.png" />
-        <img class="poleartsvisuels" src="img/rencontre-etudiant.jpeg" />
+        <img class="cheminé" src="img/galerie-cheminée.png" alt="photo galerie avec cheminée"/>
+        <img class="coin" src="img/galerie-coin.png" alt="photo galerie coin gauche"/>
+        <img class="galeriebleu" src="img/galerie-bleu-orange.png" alt="galerie de face"/>
+        <img class="photo-cd" src="img/photo-felix.jpeg" alt="photo artiste dans la galerie"/>
+        <img class="capture-galerie" src="img/galerie-mur.png" alt="photo galerie coin droit"/>
+        <img class="poleartsvisuels" src="img/rencontre-etudiant.jpeg" alt="photo de la galerie"/>
         <div class="overlap-2">
           <div class="text-wrapper-6">23</div>
-          <img class="affiche-perpi" src="img/Affiche-dedal.jpeg" />
+          <img class="affiche-perpi" src="img/Affiche-dedal.jpeg" alt="affiche évènement de la galerie avec notre artiste" />
         </div>
       </div>
     </div>
   </body>
 </html>
+
