--- a/test3.html
+++ b/test3.html
@@ -10,10 +10,10 @@
     <div class="format-ordi">
       <div class="div">
         <div class="overlap-group">
-          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" /></a>
-          <img class="loupe" src="img/loupe.png" />
-          <a href="test2.html"><img class="shop" src="img/logo-maison.png" /></a>
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png"/> </a>
+          <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour à la page contact"/></a>
+          <img class="loupe" src="img/loupe.png" alt="recherche"/>
+          <a href="test2.html"><img class="shop" src="img/logo-maison.png" alt="informations"/></a>
+          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
         </div>
         <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
         <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
@@ -36,4 +36,20 @@
           <div class="overlap-7">
             <img class="line" src="img/map.png" alt="map orientation"/>
         </div>
+
+        <fieldset id="champ1">
+          <form method="post">
+            Nom <input type="text" name="nom"><br>
+          </form>
+          <form method="post">
+            Prénom <input type="text" name="prenom"><br>
+          </form>
+          <form method="post">
+            Email <input type="text" name=" email"><br>
+          </form>
+          <form method="post">
+            Objet <input type="text" name="objet"><br>
+          </form>
+        </fieldset>
+        <a href="test.html"><p>Envoyer</p></a>
        </html>
