--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour a la page contact"/></a>
           <img class="loupe" src="img/loupe.png" alt="recherche"/>
           <a href="test2.html"><img class="shop" src="img/logo-maison.png" alt="informations"/></a>
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
+          <a href="index.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
         </div>
         <div id="artiste">
             <img class="fefelix" src="img/photo-champ-felix.jpg" alt="photo de l'artiste Felix"/>
