--- a/test2.html
+++ b/test2.html
@@ -13,7 +13,7 @@
           <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour a la page contact"/></a>
           <a href="test3.html"><img class="loupe" src="img/loupe.png" alt="recherche"/></a>
           <img class="shop" src="img/logo-maison.png" alt="informations"/>
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/></a>
+          <a href="index.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/></a>
         </div>
         <div class="overlap">
           <div class="rectangle"></div>
