--- a/test3.html
+++ b/test3.html
@@ -13,7 +13,7 @@
           <a href="test3.html"><img class="enveloppe-copie" src="img/enveloppe.png" alt="retour à la page contact"/></a>
           <img class="loupe" src="img/loupe.png" alt="recherche"/>
           <a href="test2.html"><img class="shop" src="img/logo-maison.png" alt="informations"/></a>
-          <a href="test.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
+          <a href="index.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
         </div>
         <img class="original" src="img/original.png" alt=" logo certificat authenticité" width="80px" />
         <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
