--- a/test3.html
+++ b/test3.html
@@ -52,4 +52,13 @@
           </form>
         </fieldset>
         <a href="test.html"><p>Envoyer</p></a>
+    
+     <img class="logoinsta" src="img/logoinsta.jpeg" alt="logo instagram"/>
+     <div class="instagram">
+     <a href="https://www.instagram.com/univ_cotedazur?igshid=YzAwZjE1ZTI0Zg==" target="_blank">Notre instagram </a>
+     </div>
+      <img class="logofb" src="img/logofb.png" alt="logo facebook"/>
+      <div class="facebook">
+            <a href="https://www.facebook.com/UnivCotedAzur" target="_blank">Notre Facebook </a>
+       </div>
        </html>
