--- a/test2.html
+++ b/test2.html
@@ -32,7 +32,7 @@
         <a href="test3.html"><img class="chat" src="img/bulle.png" alt="logo besoin d'aide" width="80px" /></a>
         <div class="text-wrapper-8">Oeuvres uniques et certifiées</div>
         <div class="text-wrapper-7">Besoin d’aide ?</div>
-        <img class="cheminé" src="img/galerie-cheminée.1.jpeg"/>
+        <img class="cheminé" src="img/galerie-coin.png"alt="photo galerie coin"/>
         <img class="coin" src="img/galerie-coin.png" alt="photo galerie coin gauche"/>
         <img class="galeriebleu" src="img/galerie-bleu-orange.jpg" alt="galerie de face"/>
         <img class="photo-cd" src="img/photo-felix.jpeg" alt="photo artiste dans la galerie"/>
