--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a href="index.html"><img class="capture-decran" src="img/logo-dedal.png" alt="logo"/> </a>
         </div>
         <div id="artiste">
-            <img class="fefelix" src="img/photo-champ-felix.jpg" alt="photo de l'artiste Felix"/>
+            <img class="fefelix" src="img/photo-champ-felix.jpeg" alt="photo de l'artiste Felix"/>
             <div class="overlap">
             <p class="felix-crossoneau-est">
                 Felix Crossoneau est un artiste indépendant de 21 ans. <br />Il est l'un de nos plus jeunes artistes du
@@ -26,8 +26,8 @@
             </p>
             </div>
         </div>
-        <img class="img" src="img/photo-affiche-jaune.png" alt="oeuvre de felix jaune et orange"/>
-        <img class="capture-decran-2" src="img/femme-jaune.png" alt="photo femme"/>
+        <img class="img" src="img/photo-affiche-jaune copie.png" alt="oeuvre de felix jaune et orange"/>
+        <img class="capture-decran-2" src="img/femme-jaune2.png" alt="photo femme"/>
         <p class="il-y-a-des-choses">
           <span class="text-wrapper">Il y a des choses qui ne se disent que dans l'intimité</span>
           <span class="span">, 2023<br />Huile sur toile, 71 x 54 cm</span>
@@ -40,11 +40,11 @@
           >
         </p>
         <div class="text-wrapper-2">OEUVRES</div>
-        <img class="capture-decran-3" src="img/mini-tableau-alexis.png" alt="peinture homme qui regarde son Téléphone"/>
-        <img class="capture-decran-4" src="img/femme-rouge.png" alt="peinture femme de dos qui regarde un tableau"/>
-        <img class="capture-decran-5" src="img/sdb.png" alt="peinture de salle de bain avec du sang"/>
-        <img class="capture-decran-6" src="img/mini-tableau-nb.png" alt="portrait homme cheveux long noir et blanc"/>
-        <img class="capture-decran-7" src="img/mini-tableau-homme-vert.png" alt="peinture homme avec un fond vert" />
+        <img class="capture-decran-3" src="img/mini-tableau-alexis2.png" alt="peinture homme qui regarde son Téléphone"/>
+        <img class="capture-decran-4" src="img/femme-rouge-2.png" alt="peinture femme de dos qui regarde un tableau"/>
+        <img class="capture-decran-5" src="img/sdb.1.jpg" alt="peinture de salle de bain avec du sang"/>
+        <img class="capture-decran-6" src="img/mini-tableau-nb2.png" alt="portrait homme cheveux long noir et blanc"/>
+        <img class="capture-decran-7" src="img/mini-tableau-homme-vert2.png" alt="peinture homme avec un fond vert" />
         <p class="patrick">
           <span class="text-wrapper">Patrick 23</span>
           <span class="span">, <br />2023<br />Huile sur toile, 8 x 6 cm</span>
