--- a/test2.html
+++ b/test2.html
@@ -33,7 +33,7 @@
         <div class="text-wrapper-8">Oeuvres uniques et certifiées</div>
         <div class="text-wrapper-7">Besoin d’aide ?</div>
         <img class="cheminé" src="img/Galerie nantes.jpeg"alt="photo galerie coin"/>
-        <img class="coin" src="img/img/galerie-coin2.png" alt="photo galerie coin gauche"/>
+        <img class="coin" src="img/galerie-coin2.png" alt="photo galerie coin gauche"/>
         <img class="galeriebleu" src="img/galerie-bleu-orange.jpg" alt="galerie de face"/>
         <img class="photo-cd" src="img/photo-felix.jpeg" alt="photo artiste dans la galerie"/>
         <img class="capture-galerie" src="img/galerie-mur.png" alt="photo galerie coin droit"/>
