--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="overlap">
             <p class="felix-crossoneau-est">
                 Felix Crossoneau est un artiste indépendant de 21 ans. <br />Il est l'un de nos plus jeunes artistes du
-                mois. Un réel artiste prometteur. <br />Nous vous proposons une expositions dédiée à ses oeuvres tout le
+                mois. Un réel artiste prometteur. <br />Nous vous proposons une exposition dédiée à ses oeuvres tout le
                 mois d’octobre dans notre galerie.
             </p>
             </div>
